--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Nour</title>
-    <link rel="icon" href="./assets/favicon_io/Favicon.ico">
+    <link rel="icon" href="./assets/favicon_io/Icon.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./assets/images/Pngegg.png" alt="vårt logga">
+            <img src="./assets/images/Logo.png" alt="vårt logga">
         </div>
         <button class="language-switch">Ändra språk</button>
     </header>
