--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </section>
     </main>
     <footer>
-        <p>Contact Information</p>
+        <!-- <p>Contact Information</p>
         <p>Social Media Links</p>
-        <p>Additional Resources</p>
-        <p>&copy; 2024 Al-</p>
+        <p>Additional Resources</p> -->
+        <p>&copy; 2024 Al-Nour</p>
     </footer>
 </body>
 </html>
