added languages, and style

--- a/index.html
+++ b/index.html
@@ -3,38 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al-Nour</title>
+    <title>Al-Rahma</title>
     <link rel="icon" href="./assets/favicon_io/Icon.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./assets/images/Logo.png" alt="vårt logga">
+            <a href="">
+                <img src="./assets/images/Logo.png" alt="vårt logga">
+            </a>
         </div>
-        <button class="language-switch">Ändra språk</button>
+        <button class="language-switch" onclick="switchLanguage()" data-sv="Ändra språk" data-en="Change Language" data-ar="تغيير اللغة">Ändra språk</button>
     </header>
-    <!-- <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Location</a></li>
-        </ul>
-    </nav> -->
     <main>
         <section class="banner">
-            <!-- <h1>Välkommen</h1> -->
             <img src="./assets/images/BannerImage.jpg" alt="">
         </section>
         <section class="info">
-            <div class="address">
-                <p><i class="map-pin-icon"></i> Adress:</p>
+            <div class="address" data-sv="Adress: Guldringen 70, 60368 Norrköping" data-en="Address: Guldringen 70, 60368 Norrköping" data-ar="العنوان: جولدرينجن 70، 60368 نورشوبينغ">
+                <p>Adress: Guldringen 70, 60368 Norrköping</p>
             </div>
             <div class="map">
                 <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=guldringen%2070+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
             </div>
-            <div class="details">
-                <p>Ni är alla välkommna till bönen i Navstad Guldringen 70 till exempel</p>
+            <div class="details" data-sv="Ni är alla välkommna till bönen i Navstad Guldringen 70" data-en="You are all welcome to the prayer at Navstad Guldringen 70" data-ar="الجميع مرحب بهم للصلاة في نافستاد جولدرينجن 70">
+                <p>Ni är alla välkommna till bönen i Navstad Guldringen 70</p>
             </div>
             <div class="images">
                 <!-- Gallery of Images -->
@@ -42,10 +36,8 @@
         </section>
     </main>
     <footer>
-        <!-- <p>Contact Information</p>
-        <p>Social Media Links</p>
-        <p>Additional Resources</p> -->
-        <p>&copy; 2024 Al-Nour</p>
+        <p>&copy; 2024 Al-Rahma</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
