--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
             <img src="./assets/images/BannerImage.jpg" alt="">
         </section>
         <section class="info">
-            <div class="address" data-sv="Adress: Guldringen 70, 60368 Norrköping" data-en="Address: Guldringen 70, 60368 Norrköping" data-ar="العنوان: جولدرينجن 70، 60368 نورشوبينغ">
-                <p>Adress: Guldringen 70, 60368 Norrköping</p>
+            <div class="address" data-sv="Adress: Himmelstalundsvägen, 602 13 Norrköping" data-en="Address: Himmelstalundsvägen, 602 13 Norrköping" data-ar="العنوان: هيملستالوندسفاجين 602 13 نورشوبينغ">
+                <p>Adress: Himmelstalundsvägen, 602 13 Norrköping</p>
             </div>
             <div class="map">
-                <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=guldringen%2070+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
-            </div>
-            <div class="details" data-sv="Ni är alla välkommna till bönen i Navstad Guldringen 70" data-en="You are all welcome to the prayer at Navstad Guldringen 70" data-ar="الجميع مرحب بهم للصلاة في نافستاد جولدرينجن 70">
-                <p>Ni är alla välkommna till bönen i Navstad Guldringen 70</p>
+            
+            <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=himmelstalundsf%C3%A4ltet+(My%20Business%20Name)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>            </div>
+            
+            <div class="details" 
+            data-sv="Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor" 
+            data-en="Eid Al-Adha prayers will be held at Himmelstalundsfältet on Sunday, June 16th at 09:00. Note: Please bring prayer mats." 
+            data-ar=".سيتم إقامة صلاة عيد الأضحى في حقل هيميلستالوند يوم الأحد الموافق 16 يونيو الساعة 09:00. ملاحظة: يرجى إحضار سجادات الصلاة.">
+                <p>Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor</p>
             </div>
             <div class="images">
                 <!-- Gallery of Images -->
@@ -36,7 +40,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Al-Rahma</p>
+        <p>&copy; 2024 Abdullah Mahmoud</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
