--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="./assets/images/BannerImage.jpg" alt="">
         </section>
         <section class="info">
-            <div class="address" data-sv="Adress: Himmelstalundsvägen, 602 13 Norrköping" data-en="Address: Himmelstalundsvägen, 602 13 Norrköping" data-ar="العنوان: هيملستالوندسفاجين 602 13 نورشوبينغ">
+            <div class="address" data-sv="Adress: Himmelstalundsvägen, 602 13 Norrköping" data-en="Address: Himmelstalundsvägen, 602 13 Norrköping" data-ar="العنوان: هيملستالوندسفاجين 13 602 نورشوبينغ">
                 <p>Adress: Himmelstalundsvägen, 602 13 Norrköping</p>
             </div>
             <div class="map">
@@ -31,7 +31,7 @@
             <div class="details" 
             data-sv="Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor" 
             data-en="Eid Al-Adha prayers will be held at Himmelstalundsfältet on Sunday, June 16th at 09:00. Note: Please bring prayer mats." 
-            data-ar=".سيتم إقامة صلاة عيد الأضحى في حقل هيميلستالوند يوم الأحد الموافق 16 يونيو الساعة 09:00. ملاحظة: يرجى إحضار سجادات الصلاة.">
+            data-ar=".سيتم إقامة صلاة عيد الأضحى في حقل هيميلستالوند يوم الأحد الموافق 16 يونيو الساعة 09:00. ملاحظة: يرجى إحضار سجادات الصلاة">
                 <p>Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor</p>
             </div>
             <div class="images">
