--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=himmelstalundsf%C3%A4ltet+(My%20Business%20Name)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>            </div>
             
             <div class="details" 
-            data-sv="Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor" 
-            data-en="Eid Al-Adha prayers will be held at Himmelstalundsfältet on Sunday, June 16th at 09:00. Note: Please bring prayer mats." 
-            data-ar=".سيتم إقامة صلاة عيد الأضحى في حقل هيميلستالوند يوم الأحد الموافق 16 يونيو الساعة 09:00. ملاحظة: يرجى إحضار سجادات الصلاة">
+                data-sv="Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor" 
+                data-en="Eid Al-Adha prayers will be held at Himmelstalundsfältet on Sunday, June 16th at 09:00. Note: Please bring prayer mats." 
+                data-ar="سيتم إقامة صلاة عيد الأضحى في حقل هيميلستالوند يوم الأحد الموافق 16 يونيو الساعة 09:00. ملاحظة: يرجى إحضار سجادات الصلاة">
                 <p>Eid Al-Adha bönen kommer att hållas på Himmelstalundsfältet söndag den 16e juni klockan 09:00. !OBS! Ta med bönmattor</p>
             </div>
             <div class="images">
